--- a/armv8/armv8.config
+++ b/armv8/armv8.config
@@ -4971,7 +4971,7 @@ CONFIG_PACKAGE_luci-app-aliyundrive-webdav=y
 CONFIG_PACKAGE_luci-app-amlogic=y
 # CONFIG_PACKAGE_luci-app-amule is not set
 CONFIG_PACKAGE_luci-app-argon-config=y
-CONFIG_PACKAGE_luci-app-aria2=y
+# CONFIG_PACKAGE_luci-app-aria2 is not set
 CONFIG_PACKAGE_luci-app-arpbind=y
 # CONFIG_PACKAGE_luci-app-asterisk is not set
 # CONFIG_PACKAGE_luci-app-attendedsysupgrade is not set
@@ -5269,11 +5269,6 @@ CONFIG_PACKAGE_luci-i18n-amlogic-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-argon-config-es is not set
 CONFIG_PACKAGE_luci-i18n-argon-config-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-argon-config-zh_Hans is not set
-# CONFIG_PACKAGE_luci-i18n-aria2-pt-br is not set
-# CONFIG_PACKAGE_luci-i18n-aria2-ru is not set
-# CONFIG_PACKAGE_luci-i18n-aria2-sv is not set
-CONFIG_PACKAGE_luci-i18n-aria2-zh-cn=y
-# CONFIG_PACKAGE_luci-i18n-aria2-zh-tw is not set
 CONFIG_PACKAGE_luci-i18n-arpbind-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-autotimeset-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-autotimeset-zh_Hans is not set
@@ -5714,14 +5709,13 @@ CONFIG_PACKAGE_aria2=y
 CONFIG_ARIA2_OPENSSL=y
 # CONFIG_ARIA2_GNUTLS is not set
 # CONFIG_ARIA2_NOSSL is not set
-CONFIG_ARIA2_LIBXML2=y
+# CONFIG_ARIA2_LIBXML2 is not set
 # CONFIG_ARIA2_EXPAT is not set
-# CONFIG_ARIA2_NOXML is not set
+CONFIG_ARIA2_NOXML=y
 CONFIG_ARIA2_BITTORRENT=y
-CONFIG_ARIA2_METALINK=y
-CONFIG_ARIA2_SFTP=y
-CONFIG_ARIA2_ASYNC_DNS=y
-CONFIG_ARIA2_COOKIE=y
+# CONFIG_ARIA2_SFTP is not set
+# CONFIG_ARIA2_ASYNC_DNS is not set
+# CONFIG_ARIA2_COOKIE is not set
 CONFIG_ARIA2_WEBSOCKET=y
 # end of Aria2 Configuration
 
@@ -5729,7 +5723,7 @@ CONFIG_ARIA2_WEBSOCKET=y
 # CONFIG_PACKAGE_atftpd is not set
 CONFIG_PACKAGE_curl=y
 # CONFIG_PACKAGE_gnurl is not set
-CONFIG_PACKAGE_go-aliyundrive-webdav=y
+# CONFIG_PACKAGE_go-aliyundrive-webdav is not set
 # CONFIG_PACKAGE_gowebdav is not set
 # CONFIG_PACKAGE_lftp is not set
 # CONFIG_PACKAGE_ps3netsrv is not set
